--- a/fotografie.html
+++ b/fotografie.html
@@ -12,7 +12,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="https://rensschoonman.github.io/thuispagina/Thuispagina.html" class="zijkantnav">Thuispagina</a>
-    <a href="https://rensschoonman.github.io/volleybal/volleybal.html" class="zijkantnav">Photoshoppen</a>
+    <a href="https://rensschoonman.github.io/photoshoppen/Photoshoppen.html" class="zijkantnav">Photoshoppen</a>
     <a href="https://www.youtube.com/@toonjoosten1" class="zijkantnav">Videos</a>
     <a href="https://rensschoonman.github.io/bridge/Bridge.html" class="zijkantnav">Bridge</a>
     <a href="https://rensschoonman.github.io/volleybal/volleybal.html" class="zijkantnav">Volleyball</a>
